# Steganography

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: Anforderungsanalyse.docx  arbeitsjournale.md  bit_encoding_format.md  links.md  logs.md  main_usage.md
eval/: evaluate.py  meta.py
src/steganography/: __main__.py  _logging.py  bit_format.py  bit_manipulation.py  decode.py  embed_cmd.py  encode.py  extract_cmd.py  main.py  offset_clac.py
src/steganography/utils/: bit_manipulation.py  encryption.py  file_manipulation.py  hashing.py  misc.py  pixel_manipulation.py
test/: test_bit_format.py  test_bit_manipulation.py  test_decode.py  test_encryption.py  test_hashing.py  test_pixel_manipulation.py
